tests/miniJava/pos/000441_cdrc2.MiniJava
class java { public static void Main ( String [ ] java ) { java = true && new int [ 0 ] ; } }
