tests/miniJava/neg/005049_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { { } } } class java { public int [] java ( int [] java , void int [] java ) { return 0 ; } }
